# jobscelis

./: .dockerignore  .env.example  .formatter.exs  .gitignore  ADMIN_SETUP.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  IMPROVEMENT_PLAN.md  LICENSE  MASTER_PLAN.md  README.md  SECURITY.md  create_admin.bat  create_admin_quick.bat  create_superadmin.bat  docker-compose.yml  migrate.bat  mix.exs  run.bat  server.bat
.github/workflows/: ci.yml  deploy-azure.yml  deploy-staging.yml  deploy.yml  publish-sdks.yml  release.yml
apps/streamflix_accounts/: .gitignore  README.md  mix.exs
apps/streamflix_catalog/: .gitignore  README.md  mix.exs
apps/streamflix_cdn/: .gitignore  README.md  mix.exs
cli/: README.md  package.json
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
docs/: ARCHITECTURE.md  AUDITORIA-CALIDAD-SEGURIDAD.md  BREACH_NOTIFICATION.md  COMPLIANCE_ROADMAP.md  DATA_CLASSIFICATION.md  DEPLOYMENT_FLOW.md  INCIDENT_RESPONSE.md  INDICE-DOCUMENTACION.md  LEGAL.md  MANUAL-USUARIO.md  MASTER_PLAN.md  PENTEST_REPORT.md  QUICKSTART.md  RISK_ASSESSMENT.md  ROPA.md  SLA.md  SOC2_GAP_ANALYSIS.md  WEBHOOKS_EVENTS_SPEC.md  WEBHOOK_VERIFICATION.md
k6/: events_load.js  health_load.js  webhooks_load.js
scripts/: create_admin.exs  create_admin_quick.exs  create_admin_with_data.exs  create_containers.exs  create_superadmin.exs  generate-secrets.ps1  load-env.bat  load-env.ps1  load-env.sh  setup.ps1
sdks/rust/: Cargo.toml  README.md
sdks/rust/src/: client.rs  error.rs  lib.rs  webhook.rs
terraform/: README.md  main.go
(+432 files in other folders)
