[package]
name = "jobcelis"
version = "1.2.1"
edition = "2021"
authors = ["Jobcelis <support@jobcelis.com>"]
description = "Official Rust SDK for the Jobcelis Event Infrastructure Platform"
license = "BUSL-1.1"
homepage = "https://jobcelis.com"
repository = "https://github.com/vladimirCeli/jobcelis-rust"
documentation = "https://docs.rs/jobcelis"
readme = "README.md"
keywords = ["jobcelis", "webhooks", "events", "sdk", "api"]
categories = ["api-bindings", "web-programming::http-client"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
subtle = "2"
thiserror = "2"
